--- a/dz1/index3.html
+++ b/dz1/index3.html
@@ -4,13 +4,15 @@
 	<title></title>
 </head>
 <body>
-	<h1>Задача 3</h1>
-<script type="text/javascript">
-	var a=3;
-	for (var i = 1; i <= 10; i++) {
-		b=a*i
-		alert(a+"*"+i+"="+b)
-	}
+	<h1>Задача 4</h1>
+	<script type="text/javascript">
+		var x=prompt("Ввведите целое положительное число:","");
+		var sum=0
+		if (x>0)
+			for (var i = 1; i<=x; i++) {
+				sum=sum+i
+			}
+		alert(sum)
 	</script>
 </body>
 </html>
